# Project3-CUDA-Path-Tracer

./: .gitignore  BvhPerformanceAnalysis.xlsx  CMakeLists.txt  INSTRUCTION.md  README.md
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
MY_BUILD/: ZERO_CHECK.proj
cmake/: CUDAComputesList.cmake
gltf/130Car/: scene.gltf
gltf/9mm/: license.txt  scene.gltf
gltf/Cube/: Scene.gltf
img/Bloopers/: description.txt
img/Denoise/: pa1.agx
materials/: diffuse_green.mtl  diffuse_red.mtl  diffuse_white.mtl  diffuse_yellow.mtl  emissive_green.mtl  emissive_white.mtl  emissive_white_weak.mtl  emissive_yellow.mtl  perfect_refl.mtl  perfect_refr.mtl  rough_refl.mtl  rough_transparent.mtl  specular_white.mtl  transparent.mtl
materials/test/: 1.mtl  2.mtl  3.mtl
meshes/Mask/: Gas_Mask.mtl
meshes/Simple/: box.mtl  coin.mtl  paper.mtl
meshes/Toy/: Lamp.mtl  camion_jugete.mtl
objs/: Trimm_Textures_Map.mtl  box.mtl  boxTex.tx  cat.mtl  cube.mtl  dirt.mtl  link.mtl  openBottle.mtl  plane.mtl  rock1.mtl
objs/.mayaSwatches/: boxTex.png_hcm.swatch
scenes/: 1obj_simple.txt  Aquarium.txt  Basic.txt  DOF.txt  DoF.txt  aatest.txt  advanced.txt  antialiasing.txt  aperture.txt  avocado_cornell.txt  axe.mtl  ball_trophy.txt  box.txt  boxtextured.txt  bump.txt  bunny-tree.txt  bunny.txt  car.txt  cat.txt  cesiumBox.txt  city.txt  close_cornell.txt  coin.txt  collectionRoom.txt  cornell - Copy (2).txt  cornell - Copy (3).txt  cornell - Copy 2.txt  cornell.txt  cornell2.txt  cornell3.txt  cornellClosed.txt  cornellCustom.txt  cornellDepth.txt  cornellOpen.txt  cornellReflect.txt  cornell_arsenal.txt  cornell_arsenal2.txt  cornell_big_light.txt  cornell_ceiling_light.txt  cornell_celling_light.txt  (+114 more)
src/: GPUArray.h  GPUArrayTest.cu  GPUArrayTest.h  bsdf.h  bvh.cpp  bvh.h  bvhTree.cu  bvhTree.h  camState.h  common.cpp  common.h  consts.h  cudaUtil.h  efficient.h  envMap.cpp  glslUtility.cpp  guiData.cpp  guiData.h  guiFileDialog.cpp  guiFileDialog.h  image.cpp  image.h  imageUtils.cpp  imageUtils.h  intellisense.h  interactions.h  intersections.cu  intersections.cuh  intersections.h  lbvh.cu  lbvh.h  main.cpp  main.h  material.h  mathUtil.h  noise.h  pathSegPool.cu  pathSegPool.h  pathtrace.cu  pathtrace.h  (+19 more)
src/ImGui/: CMakeLists.txt  imgui.cpp  imgui_tables.cpp  imstb_truetype.h
stream_compaction/: CMakeLists.txt  INSTRUCTION.md  README.md  Untitled.ipynb  common.cu  common.h  cpu.cu  cpu.h  efficient.cu  efficient.h  naive.cu  naive.h  radix_sort.cu  radix_sort.h  thrust.cu  thrust.h
stream_compaction/src/: main.cpp  testing_helpers.hpp
stream_compaction/stream_compaction/: CMakeLists.txt  common.cu  cpu.cu  efficient.cu  naive.cu  thrust.cu
(+59 files in other folders)
